--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -1,28 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-
-*{
-	font-family: "Ubuntu", sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Ubuntu", sans-serif;
 }
 
-.title-and-desc{
-	background-image: url("../../img/banner_bg.jpg");
-	min-height: 100vh;
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	font-size: 2rem;
+.navbar{
+    display: flex;
+    justify-content: space-around;
+    padding: 2rem;
+    backdrop-filter: blur(50px);
+    background-color:  rgba(33, 33, 33, .3);
+    color: #f8f8f8;
+    align-items: center;
 }
 
-.project-info{
-    padding-top: 20rem;
+.navbar ul{
+    list-style: none;
 }
 
-.title{
-	font-size: 3rem;
-	font-weight: bold;
+.navbar ul>li>a{
+    padding: 10px 30px;
+    text-decoration:none;
+    color: #f8f8f8;
 }
 
-.desc{
-	font-size: 1.2rem;
+.banner{
+    background-image: url("../../img/bg.png");
+    background-position: center;
+    background-attachment:fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
 }
+
+.quote{
+    display: flex;
+    justify-content: center;
+    padding: 7rem;
+    font-size: 3rem;
+    font-weight: 800;
+}
+
+.objectives-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+    padding: 5rem;
+}
+
+.objective{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    margin: 0 auto;
+    font-size: 1.1rem;
+}
+
